# test_wxWidgets

./: .gitignore  CMakeLists.txt
build_test_wxWidgets-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build_test_wxWidgets-Debug/.cmake/api/v1/reply/: cache-v2-e173a1e9cb11c3f46d87.json  cmakeFiles-v1-9dd273d483d306ebc297.json  codemodel-v2-385d83bd6546d4dd4f50.json  index-2023-03-08T19-36-06-0345.json  target-testGUI-Debug-a01eabe0f4fc96203392.json
src/app/: app.cpp  app.h
src/create_matrix_frame/: create_matrix_frame.cpp  create_matrix_frame.h
src/main_frame/: main_frame.cpp  main_frame.h
src/resource/: resource.h  resource.rc
